--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -23,16 +23,25 @@
 \address{(+1)979-422-3532}
 
 
-
 \begin{resume}
   \newsectionwidth{1.3in} 
   \resumewidth=7.1in
-
-  \section{\Large Professional Experience}{ {
+    \section{\Large Professional Experience} { 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
-        {\bf \Large SDE} & 07.2012-present \\
+        {\bf \Large SWE} & 09.2013-present \\
+        {\bf \large Google Inc.}, Kirkland, WA\\
+      \end{tabular*}
+      \begin{itemize}
+        \item  Technical Lead On Google Service Management \\
+          \url{https://cloud.google.com/service-management/overview}. \\
+          It's a one stop shop for building an API on top of all the
+          goodies offered by Google Cloud.
+      \end{itemize}
+
+      \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
+        {\bf \Large SDE} & 07.2012-08.2013 \\
         {\bf \large Amazon Web Service}, Seattle, WA\\
-  \end{tabular*}}}
+      \end{tabular*}
       \begin{itemize}
       \item Worked on AWS Relational Database Service
         \url{http://aws.amazon.com/rds/}.
@@ -74,7 +83,7 @@
       to diﬀerent KMS Server. The proxy also throttles activation requests from each IP address
       to prevent abusive usage of Azures KMS Activation Service. Wrote a full-ﬂedged C\# DNS
       Packet library from scratch.
-      \end{itemize}
+      \end{itemize} }
 
       \section{\Large Technical\\Skills} 
       Java, Ruby/Rails, C\#, C/C++, SQL, Spring, JDBC, WCF, ASP.NET, IIS, MySQL, Oracle, git, svn, Eclipse, Amazon EC2,
