--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -74,9 +74,6 @@
       {\bf \large Microsoft}, Redmond, WA\\
       Windows Azure Developer Experience Team
       \begin{itemize}
-      \item Developed the emulation tool to enable testing host-guest communication on a desktop
-      Computer, using IIS Hostable Webcore and C++ to build a mock server and
-      a C\# Wrapper to facilitate integration into existing test framework.
       \item Designed, implemented and tested the Key Management Service (KMS) proxy running in
       each Windows Azure Data Center worldwide. Using Windows Azure SDK to implement
       the Proxy Server as a service, which can be conﬁgured using DNS SRV record to point
@@ -86,8 +83,8 @@
       \end{itemize} }
 
       \section{\Large Technical\\Skills} 
-      Java, Ruby/Rails, C\#, C/C++, SQL, Spring, JDBC, WCF, ASP.NET, IIS, MySQL, Oracle, git, svn, Eclipse, Amazon EC2,
-      Amazon SWF, Amazon S3, Amazon Route 53
+      Java, C\#, C/C++, SQL, Spring, MySQL, Oracle, git,
+      Amazon EC2, Amazon SWF, Amazon S3, Amazon Route 53
 
   \section{\Large Education}       
   \begin{tabular*}{\textwidth}{ @{}l @{\extracolsep{\fill}}r}
