Update resume tex file

--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -16,7 +16,7 @@
 \topmargin=-0.6in
 % margin option puts section titles to left of text
 %\usepackage{helvetica} % uses helvetica postscript font (download helvetica.sty)
-%\usepackage{newcent}   % uses new century schoolbook postscript font 
+%\usepackage{newcent}   % uses new century schoolbook postscript font
 
 \begin{document}
 \name{{\huge Zhiyuan Yin}\\[12pt]} % the \\[12pt] adds a blank line after name
@@ -26,18 +26,32 @@
 \address{979-422-3532}
 
 \begin{resume}
-  
-  \newsectionwidth{1.3in}
-  
-  \resumewidth=10in
-\section{\Large Summary}  Engineering \& Product Leader with 9 years of experience in distributed systems, databases, cloud services at Google, Amazon and Microsoft. I enjoy working in fast paced startup-like environments and building and leading high-performing team.
 
-    \section{\Large Professional Experience} { 
+  \newsectionwidth{1.3in}
+
+  \resumewidth=10in
+\section{\Large Summary}  Engineering \& Product Leader with 10 years of experience in AI/ML, distributed systems, databases, cloud services at Facebook, Google, Amazon and Microsoft. I enjoy working in fast paced startup-like environments and building and leading high-performing team.
+
+    \section{\Large Professional Experience} {
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
-        {\bf \Large Senior Software Engineer} \\
+        {\bf \Large Staff Software Engineer/Engineering Manager} \\
+        %% & 09.2013-present \\
+        {\bf \large Facebook Inc}\\
+      {\bf AI Infrastructure Privacy and Security} &  2019- present \\
+      \end{tabular*}
+
+      \begin{itemize}
+      \item Working on Facebook-wide Privacy Infrastructure For Machine Learning Pipeline and Services.
+        \item Landed several company-wide initiative to build infrastructure for ML products to automatically meet strict and ever-evolving privacy requirements.
+       \item Led a team of 10 engineers across 2 office locations.
+         Drove technical achitecture and planning over multiple product cycles.
+      \end{itemize}
+
+      \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
+        {\bf \Large Senior Software Engineer/Tech Lead} \\
         %% & 09.2013-present \\
         {\bf \large Google Inc}\\
-      {\bf Tech Lead on Google Cloud Service Infrastructure} &  2013- 2017 \\
+      {\bf Google Cloud Service Infrastructure} &  2013- 2017 \\
       \end{tabular*}
 
       \begin{itemize}
@@ -48,15 +62,15 @@
        \item Founding member of Google API Design Committee. I helped design 20+ APIs, including \href{https://cloud.google.com/vision/}{Google Cloud Vision}, \href{https://cloud.google.com/tasks/}{Cloud Task}, \href{https://developers.google.com/vault/}{Google Vault}, etc.
       \end{itemize}
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
-      {\bf Tech Lead on Google Cloud Billing} &  2017- present \\
+      {\bf Google Cloud Monetizer} &  2017- 2019 \\
       \end{tabular*}
-      
+
       \begin{itemize}
-      \item \href{https://cloud.google.com/billing}{Google Cloud Billing} is the monetization platform for Google Cloud. 
+      \item \href{https://cloud.google.com/billing}{Google Cloud Billing} is the monetization platform for Google Cloud.
       \item Incubated new business models and offered Billing As A Service to other Google products. Successfully launched monetization for \href{https://cloud.google.com/voice/}
         {Google Voice For Enterprise} and  \href{https://gsuite.google.com/products/drive/}{G Suite Drive}.
       \item Designed and built the policy platform that ensures compliance as Google Cloud expand to heavily regulated countries and regions.
-        
+
       \end{itemize}
 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
@@ -71,7 +85,7 @@
       \item Built and maintained the distributed log analysis service that generates metrics to help evaluate the quality of service provided by RDS. It not only retrieves health data for all the RDS instances within each data center but also aggregates them to provide availability measurement for every single instance.
       %% \item Integrated Amazon Route53 (Cloud DNS provider) with RDS, which reduced ``Multi-AZ'' (RDS high availability feature) fail over time by more than 70\%. This work involves building a highly available and scalable health report service that leverages Route53's health check to achieve automatic DNS failover.
       %% \item Built extensive hands on knowledge with AWS technologies, including Elastic Compute Cloud, Simple Work Flow, Simple Storage Service and Route 53
-      %% \item Diagnose and fix problems in the system in real time, to ensure a seamless customer experience (``on-call''). 
+      %% \item Diagnose and fix problems in the system in real time, to ensure a seamless customer experience (``on-call'').
       \end{itemize}
 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
@@ -88,7 +102,7 @@
       %% into 8 highly extensible and compact packages. Reduced the number of test packages by a
       %% factor of 10 without losing coverage.
       \end{itemize}
-      
+
 %%       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
 %%         {\bf \Large SDE Intern} & 05.2010-08.2010 \\
 %%         \end{tabular*}
@@ -109,9 +123,9 @@
     \item Extensive experience in Distributed Systems, Databases, Data Processing Pipelines and RESTful Web APIs.
      \ei
 
-  \section{\Large Education}       
+  \section{\Large Education}
   \begin{tabular*}{\textwidth}{ @{}l @{\extracolsep{\fill}}r}
-    {\bf \Large M.S.,  Electrical  Engineering} 
+    {\bf \Large M.S.,  Electrical  Engineering}
     & Graduation Date: 12.2010\\
   \end{tabular*}
       {\bf \large Texas A\&M University}, College Station, TX\\
@@ -120,20 +134,20 @@
 %%         {\bf \Large B.S.,  Electrical Engineering} & Graduation Date: 07.2008\\
 %%       \end{tabular*}
 %%           {\bf \large  Shanghai Jiao Tong University}, China\\
-%%           GPA: 84/100, 
-%%           Graduated With Honors 
+%%           GPA: 84/100,
+%%           Graduated With Honors
 
 
 %%           \section{\Large Academic\\Publication}
 %%           \bi
 %%         \item Z.Y. Yin, H. Alnuweiri and A.L.N. Reddy, ``Performance of early retransmission scheme in streaming media,'' {\it IEEE International Conference of Telecommunications,} Doha, Qatar, April 2010.
-%%         \item Z.Y. Yin, H. Alnuweiri, A. L. N. Reddy, H. Celebi and K. Qaraqe, ``Improving the Performance of Delay Based protocol in delivering real time media via early retransmission, ''  {\it IEEE International Conference of Telecommunications,}, Ayia Napa, June 2011.                  
+%%         \item Z.Y. Yin, H. Alnuweiri, A. L. N. Reddy, H. Celebi and K. Qaraqe, ``Improving the Performance of Delay Based protocol in delivering real time media via early retransmission, ''  {\it IEEE International Conference of Telecommunications,}, Ayia Napa, June 2011.
 %%           \ei
-%%                   \section{\Large Academic\\Projects}  
+%%                   \section{\Large Academic\\Projects}
 %%                           {\bf \large Multimedia Streaming Emulator}
 %%                           \bi
 %%                         \item Written in C++, it runs benchmark evaluation on
-%%                           transport protocols' performance in video streaming.  
+%%                           transport protocols' performance in video streaming.
 %%                         \item Equipped with two control channels for each session,
 %%                           enabling bandwidth estimation and dynamic adjusting encoding rate.
 %%                         \item Provided standard APIs to allow easy integration into {\em ns2 } and high extensibility to facilitate future research projects.
@@ -150,26 +164,26 @@
 
 %%                           {\bf \large Operating System On MIPS Architecture}
 %%                           \begin{itemize}
-%%                           \item Built portions of the fundamental 
-%%                             structure of an operating system with C++ and 
+%%                           \item Built portions of the fundamental
+%%                             structure of an operating system with C++ and
 %%                             MIPS assembly language.
-%%                           \item Implemented the kernel memory manager with 
-%%                             Fibonacci Buddy Algorithm, and the CPU scheduler 
+%%                           \item Implemented the kernel memory manager with
+%%                             Fibonacci Buddy Algorithm, and the CPU scheduler
 %%                             with a Multilevel Feedback Scheme.
 %%                           \item Used {\em gxemul} to emulate MIPS architecture.
 %%                           \end{itemize}
 
 
 
-                          
 
-                          
+
+
 
                           %%                        {\bf \large Digital Integrated Circuit Design}
                           %%                         \begin{itemize}
                           %%                           \item Designed an 8-bit pipe-lined full adder with
                           %%                             Cadence design integration tool.
-                          %%                           \item Performed post-layout optimization on 
+                          %%                           \item Performed post-layout optimization on
                           %%                             the circuit.
                           %%                           \item Used H-clock tree method to eliminate clock
                           %%                             skew.
@@ -177,10 +191,5 @@
 
                           %\newpage
 
-\end{resume} 
+\end{resume}
 \end{document}
-
-
-
-
-
