--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -39,13 +39,14 @@
         {\bf \large Facebook Inc}\\
       {\bf AI Infrastructure Privacy and Security} &  2019- present \\
       \end{tabular*}
+      \bi
+       \item As a Engineering Manager for AI Infrastructure Privacy, I’m supporting a team of 10 engineers in their daily challenges, working to ensure user data stays private to only the uses that our users intended.
+       \item As the general technical lead for AI Compliance Infra, I drive the technical direction and roadmap for an organization of 20, spread over 3 teams, as we solve the problem of making sure Facebook durably meet privacy regulations. I own the problems of stakeholder alignment, architecture and project roadmapping, cross functional communications, goal setting and metrics definition, engineering alignment, and engineering delivery.
 
-      \begin{itemize}
-      \item Working on Facebook-wide Privacy Infrastructure For Machine Learning Pipeline and Services.
-        \item Landed several company-wide initiative to build infrastructure for ML products to automatically meet strict and ever-evolving privacy requirements.
-       \item Led a team of 10 engineers across 2 office locations.
-         Drove technical achitecture and planning over multiple product cycles.
-      \end{itemize}
+      %% \item Builds privacy aware ML infrastructure that powers all Facebook products to meet strict and ever-evolving privacy requirements.
+      %%   \item Leads the effort to build the infrastructure that tracks end to end privacy context for  major systems used by ML development.
+
+      \ei
 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
         {\bf \Large Senior Software Engineer/Tech Lead} \\
