--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -47,6 +47,14 @@
       %%   \item Leads the effort to build the infrastructure that tracks end to end privacy context for  major systems used by ML development.
 
       \ei
+      \begin{itemize}
+      \item Working on Facebook-wide privacy infrastructure for ML.
+        Impact spans across organizations. Entrusted with business-critical projects and for setting technical vision for  multiple orgs. Responsible for reviewing and providing feedback on technical designs across an org.
+
+        \item Landed multiple company-wide initiatives for ML products infrastructure to automatically meet strict and ever-evolving privacy requirements.
+       \item Led a team of 10 engineers across 2 office locations.
+         Drove technical achitecture and planning over multiple product cycles.
+      \end{itemize}
 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
         {\bf \Large Senior Software Engineer/Tech Lead} \\
