--- a/resume/res4.tex
+++ b/resume/res4.tex
@@ -30,7 +30,7 @@
   \newsectionwidth{1.3in}
 
   \resumewidth=10in
-\section{\Large Summary}  Engineering \& Product Leader with 10 years of experience in AI/ML, distributed systems, databases, cloud services at Facebook, Google, Amazon and Microsoft. I enjoy working in fast paced startup-like environments and building and leading high-performing team.
+\section{\Large Summary}  Engineering Leader with 10 years of experience in AI/ML, distributed systems, databases, cloud services at Facebook, Google, Amazon and Microsoft. I enjoy working in fast paced startup-like environments and building and leading high-performing team.
 
     \section{\Large Professional Experience} {
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
@@ -40,21 +40,18 @@
       {\bf AI Infrastructure Privacy and Security} &  2019- present \\
       \end{tabular*}
       \bi
-       \item As a Engineering Manager for AI Infrastructure Privacy, I’m supporting a team of 10 engineers in their daily challenges, working to ensure user data stays private to only the uses that our users intended.
-       \item As the general technical lead for AI Compliance Infra, I drive the technical direction and roadmap for an organization of 20, spread over 3 teams, as we solve the problem of making sure Facebook durably meet privacy regulations. I own the problems of stakeholder alignment, architecture and project roadmapping, cross functional communications, goal setting and metrics definition, engineering alignment, and engineering delivery.
+       \item As an Engineering Manager for AI Infrastructure Privacy, I’m supporting a team of {\bf 10 engineers, both local and remote}, in their daily challenges, working to ensure user data stays private to only the uses that our users intended.
+       \item As the general Tech Lead on Facebook-wide privacy infrastructure for ML, my impact spans across organizations. I am entrusted with business-critical projects and for setting the technical direction and roadmap for an organization of {\bf 20}, spread over 3 teams.
+       \item I own the problems of stakeholder alignment, architecture and project roadmapping, cross functional communications, goal setting and metrics definition, engineering alignment, and engineering delivery.
+%% as we solve the problem of making sure Facebook durably meet privacy regulations.
+      %%  \item Landed multiple company-wide initiatives for ML products infrastructure to automatically meet strict and ever-evolving privacy requirements.
+      %% \item
+
 
       %% \item Builds privacy aware ML infrastructure that powers all Facebook products to meet strict and ever-evolving privacy requirements.
       %%   \item Leads the effort to build the infrastructure that tracks end to end privacy context for  major systems used by ML development.
 
       \ei
-      \begin{itemize}
-      \item Working on Facebook-wide privacy infrastructure for ML.
-        Impact spans across organizations. Entrusted with business-critical projects and for setting technical vision for  multiple orgs. Responsible for reviewing and providing feedback on technical designs across an org.
-
-        \item Landed multiple company-wide initiatives for ML products infrastructure to automatically meet strict and ever-evolving privacy requirements.
-       \item Led a team of 10 engineers across 2 office locations.
-         Drove technical achitecture and planning over multiple product cycles.
-      \end{itemize}
 
       \begin{tabular*}{\textwidth}{@{}l @{\extracolsep{\fill}}r}
         {\bf \Large Senior Software Engineer/Tech Lead} \\
